ansible/manifests/growi/elasticsearch.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app: growi-elasticsearch
  name: growi-elasticsearch
  namespace: growi
spec:
  replicas: 1
  serviceName: growi-elasticsearch
  selector:
    matchLabels:
      app: growi-elasticsearch
  template:
    metadata:
      labels:
        app: growi-elasticsearch
    spec:
      securityContext:
        runAsUser: 1234
        fsGroup: 1234
      containers:
        - name: elasticsearch
          image: ghcr.io/isec-tut/containers/elasticsearch@sha256:76ccde2f57e79c1eceffefc2140e0f343276440270ff3dccd5768acea3f996eb
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 9200
              name: elasticsearch
          volumeMounts:
            - name: data
              mountPath: /usr/share/elasticsearch/data
            - name: elasticsearch-conf
              mountPath: /usr/share/elasticsearch/config/elasticsearch.yml
              subPath: elasticsearch.yml
              readOnly: true
          resources:
            requests:
              cpu: 1000m
              memory: 10000Mi
            limits:
              cpu: 2000m
              memory: 15000Mi
      volumes:
        - name: elasticsearch-conf
          configMap:
            name: growi-elasticsearch-conf
  persistentVolumeClaimRetentionPolicy:
    whenDeleted: Delete
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes:
          - ReadWriteOncePod
        storageClassName: iscsi-ssd-storage
        resources:
          requests:
            storage: 30Gi
---
apiVersion: v1
kind: Service
metadata:
  labels:
    service: growi-elasticsearch
  name: growi-elasticsearch
  namespace: growi
spec:
  type: ClusterIP
  ports:
    - name: elasticsearch
      port: 9200
      targetPort: elasticsearch
  selector:
    app: growi-elasticsearch
