ansible/manifests/growi/plantuml.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: growi-plantuml
  namespace: growi
spec:
  selector:
    matchLabels:
      app: growi-plantuml
  replicas: 1
  template:
    metadata:
      labels:
        app: growi-plantuml
    spec:
      containers:
        - name: growi-plantuml
          image: plantuml/plantuml-server:v1.2026.8
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
              name: growi-plantuml
          resources:
            requests:
              cpu: 200m
              memory: 100Mi
            limits:
              cpu: 500m
              memory: 500Mi
---
apiVersion: v1
kind: Service
metadata:
  labels:
    service: growi-plantuml
  name: growi-plantuml
  namespace: growi
spec:
  type: ClusterIP
  ports:
    - port: 8080
      name: growi-plantuml
  selector:
    app: growi-plantuml
