ansible/manifests/growi/growi.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app: growi
  name: growi
  namespace: growi
spec:
  replicas: 1
  serviceName: growi
  selector:
    matchLabels:
      app: growi
  template:
    metadata:
      labels:
        app: growi
    spec:
      containers:
        - name: growi
          image: ghcr.io/isec-tut/containers/growi@sha256:4206085aea7a84e9f5903fbbba17cde63032ed99bb0105f49684d6ace50536ae
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
              name: growi
          volumeMounts:
            - name: data
              mountPath: /data
            - name: secrets
              mountPath: /secrets
          resources:
            requests:
              cpu: 300m
              memory: 200Mi
            limits:
              cpu: 500m
              memory: 1000Mi
      volumes:
        - name: secrets
          secret:
            secretName: growi-secrets
  persistentVolumeClaimRetentionPolicy:
    whenDeleted: Delete
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes:
          - ReadWriteOncePod
        storageClassName: iscsi-ssd-storage
        resources:
          requests:
            storage: 30Gi
---
apiVersion: v1
kind: Service
metadata:
  labels:
    service: growi
  name: growi
  namespace: growi
spec:
  ports:
    - name: growi
      port: 3000
      targetPort: growi
  selector:
    app: growi
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-growi
  namespace: growi
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-cluster-issuer
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - wiki.isec-lab.org
      secretName: growi-cert
  rules:
    - host: wiki.isec-lab.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: growi
                port:
                  name: growi
